# webapp_sl_sales-dashboard

./: .gitignore  README.md  README_Poetry.md  app.py  pyproject.toml
data/: classicmodels.sqlite  generate_dummy.py  references_dataset.md  test_dataset.csv  test_dataset.db
notebooks/: 3_python-mysql_copy-classicmodels-db.ipynb  4_SQLEngine_basic-EDA.ipynb  6_SQLEngine_ML_Churn-Prediction.ipynb  SQLEngine.ipynb  draft.ipynb  python-mysql.ipynb
pages/: 01_eda.py  02_ml_churn.py  03_ml_product_reco.py  04_ml_credit_risk.py
private/: draft.ipynb
utils/: db_connector.py
