[project]
name = "webapp-sl-sales-dashboard"
version = "0.1.0"
description = "A streamlit dashboard for customer sales data, with Azure Synapse Date Engineering connection"
authors = [
    {name = "JBrien Barcoma",email = "jb.github22@outlook.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = "3.12.5"
dependencies = [
    "streamlit>=1.36.0",
    "pandas>=2.2.0",
    "sqlalchemy>=2.0.31",
    "pyodbc>=5.1.0",
    "jupyter>=1.0.0",
    "mysql-connector-python (>=9.4.0,<10.0.0)",
    "matplotlib (>=3.10.6,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "scikit-learn (>=1.7.2,<2.0.0)",
    "plotly (>=6.3.1,<7.0.0)",
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
black = "^24.4.2"
ruff = "^0.5.1"
pytest-asyncio = "^0.23.7"
ipykernel = "^6.30.1"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
